testsuite/tests/indexed-types/should_compile/Simple10.hs
{-# LANGUAGE TypeFamilies #-}

module Simple10 where

type family T a

foo, bar :: T a -> a
foo = undefined
bar x = foo x

