testsuite/tests/indexed-types/should_fail/T7102A.hs
{-# LANGUAGE TypeFamilies #-}
module T7102A where
type family T a b
